--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -2,10 +2,15 @@ doctrine:
     dbal:
         override_url: true
         url: '%env(resolve:DATABASE_URL)%'
+        # driver: 'pdo_mysql'
+        # server_version: '5.6'
+        mapping_types: 
+           enum: string
 
         # IMPORTANT: You MUST configure your server version,
         # either here or in the DATABASE_URL env var (see .env file)
         #server_version: '13'
+
     orm:
         auto_generate_proxy_classes: true
         naming_strategy: doctrine.orm.naming_strategy.underscore_number_aware
